<?xml version="1.0"?>
<package format="2">
  <name>my_stdr_control</name>
  <version>0.0.0</version>
  <description>The my_stdr_control package</description>
  <maintainer email="mws85@case.edu">matt</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <build_depend>roslint</build_depend>

  <export>
  </export>
</package>
